[package]
name = "hw3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "exercise1"
path = "src/exercise1/bin/main.rs"

[[bin]]
name = "exercise2"
path = "src/exercise2/bin/main.rs"

[[bin]]
name = "exercise3"
path = "src/exercise3/bin/main.rs"